--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+swc_ecma_ast = "0.121.2"
 chrono = "0.4.38"
 hex = "0.4.3"
+lazy_static = "1.5.0"
 once_cell = "1.19.0"
 rand = "0.8.5"
 regex = "1.11.0"
 serde_json = "1.0.128"
 sha2 = "0.10.8"
 swc_common = "0.40.2"
-swc_ecma_ast = "0.121.2"
 swc_ecma_parser = "0.152.2"
 swc_ecma_visit = "0.107.1"
